# WMA-projekt

./: .gitignore  adaptive_threshold_method.py  background_substraction_method.py  color_segmentation.py  dnn_yolo_method.py  frame_processing.py  main.py  pyproject.toml  setup.cfg  tempCodeRunnerFile.py  utils.py
WMA/: color_segmentation.py  frame_processing.py  main.py  mask_creation.py  utils.py
old/: at.py  bs.py
yolov3/: yolov3_oop.py
yolov5/: main.py
