[tool.poetry]
name = "car_movement_detection"
version = "0.1.0"
description = ""
authors = ["Zofia Kubrak <zofiakubrak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-contrib-python = "^4.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
