[tool.poetry]
name = "car_movement_detection"
version = "0.1.0"
description = ""
authors = ["Zofia Kubrak <zofiakubrak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-contrib-python = "^4.5.5"
numpy = "^1.22.4"
matplotlib = "^3.5.2"
torch = "^1.11.0"
pafy = "^0.5.5"
torchvision = "^0.12.0"
torchaudio = "^0.11.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.950"
black = "^22.3.0"
isort = "^5.10.1"
pylint = "^2.13.9"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.message_control]
disable = "all"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
no_warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
